add sponsor.css file

--- a/index.html
+++ b/index.html
@@ -16,16 +16,17 @@
             <img src="images/logo.jpg" class="d-inline-block align-text-top" id="logo">
             SpeedFeet
           </a> 
-          <div class="dropdown">
-            <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               contact
             </a>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-              <li><a class="dropdown-item" href="tel:+33600000000">téléphoner</a></li>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="tel:+600000000">téléphoner</a></li>
               <li><a class="dropdown-item" href="mailto:exemple@exemple.com">envoyer un e-mail</a></li>
             </ul>
-          </div>
-            <a class="navbar-brand" title="lien vers la page évènement" href="event.html">évènement à venir</a>
+          </li>
+          <a class="navbar-brand" href="#">contact</a>
+          <a class="navbar-brand" title="lien vers la page évènement" href="event.html">évènement à venir</a>
         </div>
       </nav>
       <img src="images/course.jpg" id="run">
@@ -34,7 +35,7 @@
 
     </main>
     <footer>
-
+      <img src="images/addidas.png" id="sponsor">
     </footer>
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/bootstrap.js"></script>
