--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>SpeedFeet</title>
     <meta name="description" content="site vitrine de l'association de course à pieds SpeedFeet"/>
-    <link href="css/bootstrap.css" rel="stylesheet"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="css/styles.css" rel="stylesheet"/>
   </head>
   <body>
@@ -22,8 +22,19 @@
       </nav>
       <img src="images/course.jpg" id="run">
     </header>
-    <main>
+    <main class="d-flex justify-content-around">
+      <section>
+        <h1>bienvenue !</h1>
+        <p>Bonjour, nous sommes une association qui organise des évènements de courses à pieds dans toute la France.<br/>
+        Le dernier en date est le célèbre marathon de Paris.</p>
 
+      </section>
+      <article>
+
+      </article>
+      <aside>
+
+      </aside>
     </main>
     <footer class="d-flex justify-content-around">
       <div class="sponsor">
@@ -39,7 +50,7 @@
       </div>
     </footer>
     <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/bootstrap.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
