--- a/index.html
+++ b/index.html
@@ -5,37 +5,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>SpeedFeet</title>
     <meta name="description" content="site vitrine de l'association de course à pieds SpeedFeet"/>
+    <!--add bootstrap cdn-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    
     <link href="css/styles.css" rel="stylesheet"/>
+
+    <!--add link to main font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
-      <nav class="navbar fixed-top navbar-light bg-light">
+      <nav class="navbar fixed-top navbar-light bg-light d-flex justify-content-around">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">
             <img src="images/logo.jpg" class="d-inline-block align-text-top" id="logo">
             SpeedFeet
           </a> 
-          <a class="navbar-brand" href="#contact">contact</a>
-          <a class="navbar-brand" title="lien vers la page évènement" href="event.html">évènement à venir</a>
+          <a class="navbar-brand contact" href="#contact">contact</a>
+          <a class="navbar-brand event" title="lien vers la page évènement" href="event.html">évènement à venir</a>
         </div>
       </nav>
       <img src="images/course.jpg" id="run">
     </header>
-    <main class="d-flex justify-content-around">
-      <section>
-        <h1>bienvenue !</h1>
-        <p>Bonjour, nous sommes une association qui organise des évènements de courses à pieds dans toute la France.<br/>
-        Le dernier en date est le célèbre marathon de Paris.</p>
-
-      </section>
+    <main class="d-flex justify-content-center">
       <article>
-
+        <section>
+          <h1>bienvenue !</h1>
+          <p>Bonjour, nous sommes une association qui organise des évènements de courses à pieds dans toute la France.<br/>
+          Le dernier en date est le célèbre marathon de Paris.</p>
+        </section>
+        <aside>
+          <iframe 
+            src="https://www.running-addict.fr/conseil-running/parcours-du-marathon-de-paris-2022-analyse/" 
+            name="article du marathon"
+            width="500"
+            height="250">
+          </iframe>
+        </aside>
       </article>
-      <aside>
-
-      </aside>
     </main>
+    <nav aria-label="Page navigation example">
+      <ul class="pagination justify-content-end m-5">
+        <li class="page-item"><a class="page-link" href="http://127.0.0.1:3000/event.html">next</a></li>
+      </ul>
+    </nav>
     <footer class="d-flex justify-content-around">
       <div class="sponsor">
         <h5>Sponsor</h5>
