add event in event.html

--- a/index.html
+++ b/index.html
@@ -29,8 +29,13 @@
       </nav>
       <img src="images/course.jpg" id="run">
     </header>
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item active" aria-current="page">Accueil</li>
+      </ol>
+    </nav>
     <main class="d-flex justify-content-center">
-      <article>
+      <article id="article">
         <section>
           <h1>bienvenue !</h1>
           <p>Bonjour, nous sommes une association qui organise des évènements de courses à pieds dans toute la France.<br/>
