--- a/event.html
+++ b/event.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>SpeedFeet</title>
     <meta name="description" content="site vitrine de l'association de course à pieds SpeedFeet, page évènement"/>
-    <link href="css/bootstrap.css" rel="stylesheet"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="css/styles.css" rel="stylesheet"/>
   </head>
   <body>
@@ -15,17 +15,136 @@
           <a class="navbar-brand" href="index.html">
             <img src="images/logo.jpg" class="d-inline-block align-text-top" id="logo">
             SpeedFeet
-          </a> 
+          </a>
+          <a class="navbar-brand contact" href="#contact">contact</a>
+          <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item"><a href="http://127.0.0.1:3000/index.html">Accueil</a></li>
+              <li class="breadcrumb-item active" aria-current="page">évènement</li>
+            </ol>
+          </nav> 
       </nav>
+      <img src="images/course.jpg" id="run">
     </header>
     <main>
+      <article>
+        <section class="section">
+          <div class="card mb-3" style="max-width: 100%;">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img src="images/juin.jpg" class="img-fluid rounded-start" alt="course à pied">
+                <div class="newsDate" style="position:relative;top:0px;left:0px;padding-left:0px;padding-right:0px;width:40px;background-color:#d90008;text-align:center;">
+                    <h4 style="font-size:18px;width:34px;"><div style="color:#ffffff;">15</div></h4>
+                    <span style="font-size:12px;width:34px;color:#ffffff;border-bottom-color:#ffffff;">Juin</span>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">La ruée des fadas à Dijon</h5>
+                  <p class="card-text">21 - Franxault - Côte-d'Or - France</p>
 
+                    <p class="card-text">Depuis 2014, plus de 150 000 Fadas ont tentés cette Aventure Unique en France. Cette année, la Ruée des Fadas débarque à Franxault (près de Dijon), au domaine du Lac de Chour. Tous les nouveaux obstacles et les obstacle...</p>
+                    
+                    <p class="card-text">Course d'obstacles, Trail, Course nature, CaniCross, Festival, Fête</p>
+
+                   <p class="card-text">8km</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="section">
+          <div class="card mb-3" style="max-width: 100%;">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img src="images/juillet.jpg" class="img-fluid rounded-start" alt="course à pieds">
+                <div class="newsDate" style="position:relative;top:0px;left:0px;padding-left:0px;padding-right:0px;width:40px;background-color:#d90008;text-align:center;">
+                  <h4 style="font-size:18px;width:34px;"><div style="color:#ffffff;">3</div></h4>
+                  <span style="font-size:12px;width:34px;color:#ffffff;border-bottom-color:#ffffff;">Juillet</span>
+                </div>
+            </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Rush du bout du monde</h5>
+                  <p class="card-text">88 - Mortagne - Vosges - France</p>
+
+                  <p class="card-text">Programme : - Trail de 14 Km. dénivelé +-500 m, départ à 10h00 (inscription : 12 euros). - Trail de 24 Km. dénivelé +-500 m, départ à 09h00 (inscription : 14 euros). - Marches populaires de 8 Km et 15 Km qui font le t...</p>
+
+                  <p class="card-text">Trail, Course nature</p>
+
+                  <p class="card-text">24km 15km 14km 8km</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="section">
+          <div class="card mb-3" style="max-width: 100%;">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img src="images/aout.jpg" class="img-fluid rounded-start" alt="course à pieds">
+                <div class="newsDate" style="position:relative;top:0px;left:0px;padding-left:0px;padding-right:0px;width:40px;background-color:#d90008;text-align:center;">
+                  <h4 style="font-size:18px;width:34px;"><div style="color:#ffffff;">23</div></h4>
+                  <span style="font-size:12px;width:34px;color:#ffffff;border-bottom-color:#ffffff;">Aout</span>
+                </div>
+            </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Foulée de la ligue</h5>
+                  <p class="card-text">68 - Colmar - Haut-Rhin - France</p>
+
+                  <p class="card-text">10ème anniversaire des Foulées de la Ligue. Les Foulées de la Ligue est un événement organisé par la Ligue contre le cancer du Haut-Rhin depuis 2011. La 10ème édition sera organisée le dimanche 05 juin au Parc Expo de...</p>
+
+                  <p class="card-text">Course à pied (sur route)</p>
+
+                  <p class="card-text">9km 6km</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="section">
+          <div class="card mb-3" style="max-width: 100%;">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img src="images/septembre.jpg" class="img-fluid rounded-start" alt="course à pieds">
+                <div class="newsDate" style="position:relative;top:0px;left:0px;padding-left:0px;padding-right:0px;width:40px;background-color:#d90008;text-align:center;">
+                  <h4 style="font-size:18px;width:34px;"><div style="color:#ffffff;">12</div></h4>
+                  <span style="font-size:12px;width:34px;color:#ffffff;border-bottom-color:#ffffff;">Septembre</span>
+                </div>
+            </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Semi marathon de rosheim</h5>
+                  <p class="card-text">67 - Rosheim - Bas-Rhin - France</p>
+
+                  <p class="card-text">Programme : - 09h00 : 21 Km semi-marathon accessible à tous sapeurs pompiers ou non. - 09h10 : 8,7 Km accessibles à tous : sapeur-pompiers ou non. - 09h20 : 4,2 Km accessibles à tous : sapeur-pompiers ou non et aux JS...</p>
+
+                  <p class="card-text">Course à pied (sur route)</p>
+
+                  <p class="card-text">21km</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+      </article>
     </main>
-    <footer>
-
+    <footer class="d-flex justify-content-around">
+      <div class="sponsor">
+        <h5>Sponsor</h5>
+        <a href="https://www.adidas.fr/" target="_blank"><img src="images/addidas.png" id="sponsorLogo"></a>
+      </div>
+      <div id="contact">
+        <h5>Contact</h5>
+        <ul>
+          <li><a href="tel:+600000000">téléphoner</a></li>
+          <li><a href="mailto:exemple@exemple.com">envoyer un e-mail</a></li>
+        </ul>
+      </div>
     </footer>
     <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/bootstrap.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
