add sass folder and new images

--- a/event.html
+++ b/event.html
@@ -17,26 +17,26 @@
             SpeedFeet
           </a>
           <a class="navbar-brand contact" href="#contact">contact</a>
-          <nav aria-label="breadcrumb">
-            <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="http://127.0.0.1:3000/index.html">Accueil</a></li>
-              <li class="breadcrumb-item active" aria-current="page">évènement</li>
-            </ol>
-          </nav> 
       </nav>
       <img src="images/course.jpg" id="run">
     </header>
     <main>
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="http://127.0.0.1:3000/index.html">Accueil</a></li>
+          <li class="breadcrumb-item active" aria-current="page">évènement</li>
+        </ol>
+      </nav> 
       <article>
         <section class="section">
           <div class="card mb-3" style="max-width: 100%;">
             <div class="row g-0">
-              <div class="col-md-4">
-                <img src="images/juin.jpg" class="img-fluid rounded-start" alt="course à pied">
+              <div class="d-flex col-md-4">
                 <div class="newsDate" style="position:relative;top:0px;left:0px;padding-left:0px;padding-right:0px;width:40px;background-color:#d90008;text-align:center;">
-                    <h4 style="font-size:18px;width:34px;"><div style="color:#ffffff;">15</div></h4>
-                    <span style="font-size:12px;width:34px;color:#ffffff;border-bottom-color:#ffffff;">Juin</span>
+                  <h4 style="font-size:18px;width:34px;"><div style="color:#ffffff;">15</div></h4>
+                  <span style="font-size:12px;width:34px;color:#ffffff;border-bottom-color:#ffffff;">Juin</span>
                 </div>
+                <img src="images/juin.jpg" class="img-fluid rounded-start" alt="course à pied"> 
               </div>
               <div class="col-md-8">
                 <div class="card-body">
@@ -56,12 +56,12 @@
         <section class="section">
           <div class="card mb-3" style="max-width: 100%;">
             <div class="row g-0">
-              <div class="col-md-4">
-                <img src="images/juillet.jpg" class="img-fluid rounded-start" alt="course à pieds">
+              <div class="d-flex col-md-4">
                 <div class="newsDate" style="position:relative;top:0px;left:0px;padding-left:0px;padding-right:0px;width:40px;background-color:#d90008;text-align:center;">
                   <h4 style="font-size:18px;width:34px;"><div style="color:#ffffff;">3</div></h4>
                   <span style="font-size:12px;width:34px;color:#ffffff;border-bottom-color:#ffffff;">Juillet</span>
                 </div>
+                <img src="images/juillet.jpg" class="img-fluid rounded-start" alt="course à pieds">
             </div>
               <div class="col-md-8">
                 <div class="card-body">
@@ -81,12 +81,12 @@
         <section class="section">
           <div class="card mb-3" style="max-width: 100%;">
             <div class="row g-0">
-              <div class="col-md-4">
-                <img src="images/aout.jpg" class="img-fluid rounded-start" alt="course à pieds">
+              <div class="d-flex col-md-4">
                 <div class="newsDate" style="position:relative;top:0px;left:0px;padding-left:0px;padding-right:0px;width:40px;background-color:#d90008;text-align:center;">
                   <h4 style="font-size:18px;width:34px;"><div style="color:#ffffff;">23</div></h4>
                   <span style="font-size:12px;width:34px;color:#ffffff;border-bottom-color:#ffffff;">Aout</span>
                 </div>
+                <img src="images/aout.jpg" class="img-fluid rounded-start" alt="course à pieds">
             </div>
               <div class="col-md-8">
                 <div class="card-body">
@@ -106,12 +106,12 @@
         <section class="section">
           <div class="card mb-3" style="max-width: 100%;">
             <div class="row g-0">
-              <div class="col-md-4">
-                <img src="images/septembre.jpg" class="img-fluid rounded-start" alt="course à pieds">
+              <div class="d-flex col-md-4">
                 <div class="newsDate" style="position:relative;top:0px;left:0px;padding-left:0px;padding-right:0px;width:40px;background-color:#d90008;text-align:center;">
                   <h4 style="font-size:18px;width:34px;"><div style="color:#ffffff;">12</div></h4>
                   <span style="font-size:12px;width:34px;color:#ffffff;border-bottom-color:#ffffff;">Septembre</span>
                 </div>
+                <img src="images/septembre.jpg" class="img-fluid rounded-start" alt="course à pieds">
             </div>
               <div class="col-md-8">
                 <div class="card-body">
@@ -138,8 +138,8 @@
       <div id="contact">
         <h5>Contact</h5>
         <ul>
-          <li><a href="tel:+600000000">téléphoner</a></li>
-          <li><a href="mailto:exemple@exemple.com">envoyer un e-mail</a></li>
+          <li><img src="images/call.png" style="width: 30px; height: 30px"/><a href="tel:+600000000">téléphoner</a></li>
+          <li><img src="images/email.png"style="width: 30px; height: 30px"/><a href="mailto:exemple@exemple.com">envoyer un e-mail</a></li>
         </ul>
       </div>
     </footer>
