--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
       <div id="contact">
         <h5>Contact</h5>
         <ul>
-          <li><a href="tel:+600000000">téléphoner</a></li>
-          <li><a href="mailto:exemple@exemple.com">envoyer un e-mail</a></li>
+          <li><img src="images/call.png" style="width: 30px; height: 30px"/><a href="tel:+600000000">téléphoner</a></li>
+          <li><img src="images/email.png"style="width: 30px; height: 30px"/><a href="mailto:exemple@exemple.com">envoyer un e-mail</a></li>
         </ul>
       </div>
     </footer>
