--- a/event.html
+++ b/event.html
@@ -29,12 +29,12 @@
       </nav> 
       <article>
         <section class="section">
-          <div class="card mb-3" style="max-width: 100%;">
+          <div class="card mb-3">
             <div class="row g-0">
               <div class="d-flex col-md-4">
-                <div class="newsDate" style="position:relative;top:0px;left:0px;padding-left:0px;padding-right:0px;width:40px;background-color:#d90008;text-align:center;">
-                  <h4 style="font-size:18px;width:34px;"><div style="color:#ffffff;">15</div></h4>
-                  <span style="font-size:12px;width:34px;color:#ffffff;border-bottom-color:#ffffff;">Juin</span>
+                <div class="newsDate">
+                  <h4 class="day">15</h4>
+                  <p class="month">Juin</p>
                 </div>
                 <img src="images/juin.jpg" class="img-fluid rounded-start" alt="course à pied"> 
               </div>
@@ -54,12 +54,12 @@
           </div>
         </section>
         <section class="section">
-          <div class="card mb-3" style="max-width: 100%;">
+          <div class="card mb-3">
             <div class="row g-0">
               <div class="d-flex col-md-4">
-                <div class="newsDate" style="position:relative;top:0px;left:0px;padding-left:0px;padding-right:0px;width:40px;background-color:#d90008;text-align:center;">
-                  <h4 style="font-size:18px;width:34px;"><div style="color:#ffffff;">3</div></h4>
-                  <span style="font-size:12px;width:34px;color:#ffffff;border-bottom-color:#ffffff;">Juillet</span>
+                <div class="newsDate">
+                  <h4 class="day">3</h4>
+                  <p class="month">Juillet</p>
                 </div>
                 <img src="images/juillet.jpg" class="img-fluid rounded-start" alt="course à pieds">
             </div>
@@ -79,12 +79,12 @@
           </div>
         </section>
         <section class="section">
-          <div class="card mb-3" style="max-width: 100%;">
+          <div class="card mb-3">
             <div class="row g-0">
               <div class="d-flex col-md-4">
-                <div class="newsDate" style="position:relative;top:0px;left:0px;padding-left:0px;padding-right:0px;width:40px;background-color:#d90008;text-align:center;">
-                  <h4 style="font-size:18px;width:34px;"><div style="color:#ffffff;">23</div></h4>
-                  <span style="font-size:12px;width:34px;color:#ffffff;border-bottom-color:#ffffff;">Aout</span>
+                <div class="newsDate">
+                  <h4 class="day">23</h4>
+                  <p class="month">Aout</p>
                 </div>
                 <img src="images/aout.jpg" class="img-fluid rounded-start" alt="course à pieds">
             </div>
@@ -104,12 +104,12 @@
           </div>
         </section>
         <section class="section">
-          <div class="card mb-3" style="max-width: 100%;">
+          <div class="card mb-3">
             <div class="row g-0">
               <div class="d-flex col-md-4">
-                <div class="newsDate" style="position:relative;top:0px;left:0px;padding-left:0px;padding-right:0px;width:40px;background-color:#d90008;text-align:center;">
-                  <h4 style="font-size:18px;width:34px;"><div style="color:#ffffff;">12</div></h4>
-                  <span style="font-size:12px;width:34px;color:#ffffff;border-bottom-color:#ffffff;">Septembre</span>
+                <div class="newsDate">
+                  <h4 class="day">12</h4>
+                  <p class="month">Septembre</p>
                 </div>
                 <img src="images/septembre.jpg" class="img-fluid rounded-start" alt="course à pieds">
             </div>
@@ -129,6 +129,12 @@
           </div>
         </section>
       </article>
+      <nav aria-label="Page navigation example">
+        <ul class="pagination justify-content-center m-5">
+          <li class="page-item"><a class="page-link" href="http://127.0.0.1:3000/index.html">page précédente</a></li>
+          <li class="page-item"><a class="page-link" href="http://127.0.0.1:3000/event.html">2</a></li>
+        </ul>
+      </nav>
     </main>
     <footer class="d-flex justify-content-around">
       <div class="sponsor">
