delete script.js tag and add comment

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       </nav>
       <img src="images/course.jpg" id="run">
     </header>
+    <!--add breadcrumb-->
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
         <li class="breadcrumb-item active" aria-current="page">Accueil</li>
@@ -38,9 +39,12 @@
       <article id="article">
         <section>
           <h1>bienvenue !</h1>
-          <p>Bonjour, nous sommes une association qui organise des évènements de courses à pieds dans toute la France.<br/>
+          <p>SpeedFeet est une association qui organise des évènements de courses à pieds dans toute la France.<br/>
           Le dernier en date est le célèbre marathon de Paris.</p>
+
+          <p>Nous comptons plus de 150 000 membres et éspèrons être de plus en plus nombreux. Si l'aventutre vous tente, contactez nous via la rubrique <a href="#contact">contact</a> ci dessous.</p>
         </section>
+        <!--add external article-->
         <aside>
           <iframe 
             src="https://www.running-addict.fr/conseil-running/parcours-du-marathon-de-paris-2022-analyse/" 
@@ -51,6 +55,7 @@
         </aside>
       </article>
     </main>
+    <!--add pagination-->
     <nav aria-label="Page navigation example">
       <ul class="pagination justify-content-center m-5">
         <li class="page-item"><a class="page-link" href="">1</a></li>
@@ -58,10 +63,12 @@
       </ul>
     </nav>
     <footer class="d-flex justify-content-around">
+      <!--add sponsor-->
       <div class="sponsor">
         <h5>Sponsor</h5>
         <a href="https://www.adidas.fr/" target="_blank"><img src="images/addidas.png" id="sponsorLogo"></a>
       </div>
+      <!--add contact section-->
       <div id="contact">
         <h5>Contact</h5>
         <ul>
@@ -72,6 +79,6 @@
     </footer>
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="js/script.js"></script>
+    
   </body>
 </html>
