--- a/event.html
+++ b/event.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>SpeedFeet</title>
     <meta name="description" content="site vitrine de l'association de course à pieds SpeedFeet, page évènement"/>
+    <!--add boostrap framework cdn-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="css/styles.css" rel="stylesheet"/>
   </head>
   <body>
     <header>
+      <!-- add navbar-->
       <nav class="navbar fixed-top navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">
@@ -21,6 +23,7 @@
       <img src="images/course.jpg" id="run">
     </header>
     <main>
+      <!--add breadcrumb-->
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="http://127.0.0.1:3000/index.html">Accueil</a></li>
@@ -129,6 +132,7 @@
           </div>
         </section>
       </article>
+      <!--add pagination-->
       <nav aria-label="Page navigation example">
         <ul class="pagination justify-content-center m-5">
           <li class="page-item"><a class="page-link" href="http://127.0.0.1:3000/index.html">page précédente</a></li>
@@ -137,10 +141,12 @@
       </nav>
     </main>
     <footer class="d-flex justify-content-around">
+      <!--add sponsor-->
       <div class="sponsor">
         <h5>Sponsor</h5>
         <a href="https://www.adidas.fr/" target="_blank"><img src="images/addidas.png" id="sponsorLogo"></a>
       </div>
+      <!--add contact section-->
       <div id="contact">
         <h5>Contact</h5>
         <ul>
@@ -151,6 +157,5 @@
     </footer>
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="js/script.js"></script>
   </body>
 </html>
