--- a/event.html
+++ b/event.html
@@ -15,12 +15,12 @@
       <nav class="navbar fixed-top navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">
-            <img src="images/logo.jpg" class="d-inline-block align-text-top" id="logo">
+            <img src="images/logo.jpg" class="d-inline-block align-text-top" id="logo" alt="un homme qui cour">
             SpeedFeet
           </a>
           <a class="navbar-brand contact" href="#contact">contact</a>
       </nav>
-      <img src="images/course.jpg" id="run">
+      <img src="images/course.jpg" id="run" alt="des gens qui courrent">
     </header>
     <main>
       <!--add breadcrumb-->
@@ -39,7 +39,7 @@
                   <h4 class="day">15</h4>
                   <p class="month">Juin</p>
                 </div>
-                <img src="images/juin.jpg" class="img-fluid rounded-start" alt="course à pied"> 
+                <img src="images/juin.jpg" class="img-fluid rounded-start" alt="des gens qui courrent"> 
               </div>
               <div class="col-md-8">
                 <div class="card-body">
@@ -64,7 +64,7 @@
                   <h4 class="day">3</h4>
                   <p class="month">Juillet</p>
                 </div>
-                <img src="images/juillet.jpg" class="img-fluid rounded-start" alt="course à pieds">
+                <img src="images/juillet.jpg" class="img-fluid rounded-start" alt="des gens qui courrent">
             </div>
               <div class="col-md-8">
                 <div class="card-body">
@@ -89,7 +89,7 @@
                   <h4 class="day">23</h4>
                   <p class="month">Aout</p>
                 </div>
-                <img src="images/aout.jpg" class="img-fluid rounded-start" alt="course à pieds">
+                <img src="images/aout.jpg" class="img-fluid rounded-start" alt="des gens qui courrent">
             </div>
               <div class="col-md-8">
                 <div class="card-body">
@@ -114,7 +114,7 @@
                   <h4 class="day">12</h4>
                   <p class="month">Septembre</p>
                 </div>
-                <img src="images/septembre.jpg" class="img-fluid rounded-start" alt="course à pieds">
+                <img src="images/septembre.jpg" class="img-fluid rounded-start" alt="des gens qui courrent">
             </div>
               <div class="col-md-8">
                 <div class="card-body">
@@ -144,14 +144,14 @@
       <!--add sponsor-->
       <div class="sponsor">
         <h5>Sponsor</h5>
-        <a href="https://www.adidas.fr/" target="_blank"><img src="images/addidas.png" id="sponsorLogo"></a>
+        <a href="https://www.adidas.fr/" target="_blank"><img src="images/addidas.png" id="sponsorLogo" alt="logo addidas"></a>
       </div>
       <!--add contact section-->
       <div id="contact">
         <h5>Contact</h5>
         <ul>
-          <li><img src="images/call.png" style="width: 30px; height: 30px"/><a href="tel:+600000000">téléphoner</a></li>
-          <li><img src="images/email.png"style="width: 30px; height: 30px"/><a href="mailto:exemple@exemple.com">envoyer un e-mail</a></li>
+          <li><img src="images/call.png" style="width: 30px; height: 30px" alt="un telephone"/><a href="tel:+600000000">téléphoner</a></li>
+          <li><img src="images/email.png"style="width: 30px; height: 30px" alt="une enveloppe"/><a href="mailto:exemple@exemple.com">envoyer un e-mail</a></li>
         </ul>
       </div>
     </footer>
