--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
       <nav class="navbar fixed-top navbar-light bg-light d-flex justify-content-around">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">
-            <img src="images/logo.jpg" class="d-inline-block align-text-top" id="logo">
+            <img src="images/logo.jpg" class="d-inline-block align-text-top" id="logo" alt="un homme qui court">
             SpeedFeet
           </a> 
           <a class="navbar-brand contact" href="#contact">contact</a>
           <a class="navbar-brand event" title="lien vers la page évènement" href="event.html">évènement à venir</a>
         </div>
       </nav>
-      <img src="images/course.jpg" id="run">
+      <img src="images/course.jpg" id="run" alt="des fens qui courrent">
     </header>
     <!--add breadcrumb-->
     <nav aria-label="breadcrumb">
@@ -66,14 +66,14 @@
       <!--add sponsor-->
       <div class="sponsor">
         <h5>Sponsor</h5>
-        <a href="https://www.adidas.fr/" target="_blank"><img src="images/addidas.png" id="sponsorLogo"></a>
+        <a href="https://www.adidas.fr/" target="_blank"><img src="images/addidas.png" id="sponsorLogo" alt="logo addidas"></a>
       </div>
       <!--add contact section-->
       <div id="contact">
         <h5>Contact</h5>
         <ul>
-          <li><img src="images/call.png" style="width: 30px; height: 30px"/><a href="tel:+600000000">téléphoner</a></li>
-          <li><img src="images/email.png"style="width: 30px; height: 30px"/><a href="mailto:exemple@exemple.com">envoyer un e-mail</a></li>
+          <li><img src="images/call.png" style="width: 30px; height: 30px" alt="un telephone"/><a href="tel:+600000000">téléphoner</a></li>
+          <li><img src="images/email.png" style="width: 30px; height: 30px" alt="une enveloppe"/><a href="mailto:exemple@exemple.com">envoyer un e-mail</a></li>
         </ul>
       </div>
     </footer>
