fix event.html error

--- a/event.html
+++ b/event.html
@@ -19,6 +19,7 @@
             SpeedFeet
           </a>
           <a class="navbar-brand contact" href="#contact">contact</a>
+        </div>
       </nav>
       <img src="images/course.jpg" id="run" alt="des gens qui courrent">
     </header>
@@ -151,7 +152,7 @@
         <h5>Contact</h5>
         <ul>
           <li><img src="images/call.png" style="width: 30px; height: 30px" alt="un telephone"/><a href="tel:+600000000">téléphoner</a></li>
-          <li><img src="images/email.png"style="width: 30px; height: 30px" alt="une enveloppe"/><a href="mailto:exemple@exemple.com">envoyer un e-mail</a></li>
+          <li><img src="images/email.png" style="width: 30px; height: 30px" alt="une enveloppe"/><a href="mailto:exemple@exemple.com">envoyer un e-mail</a></li>
         </ul>
       </div>
     </footer>
