change url pagination et breadcrumb

--- a/event.html
+++ b/event.html
@@ -27,7 +27,7 @@
       <!--add breadcrumb-->
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="http://127.0.0.1:3000/index.html">Accueil</a></li>
+          <li class="breadcrumb-item"><a href="index.html">Accueil</a></li>
           <li class="breadcrumb-item active" aria-current="page">évènement</li>
         </ol>
       </nav> 
@@ -136,8 +136,8 @@
       <!--add pagination-->
       <nav aria-label="Page navigation example">
         <ul class="pagination justify-content-center m-5">
-          <li class="page-item"><a class="page-link" href="http://127.0.0.1:3000/index.html">page précédente</a></li>
-          <li class="page-item"><a class="page-link" href="http://127.0.0.1:3000/event.html">2</a></li>
+          <li class="page-item"><a class="page-link" href="index.html">page précédente</a></li>
+          <li class="page-item"><a class="page-link" href="event.html">2</a></li>
         </ul>
       </nav>
     </main>
