--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
     <!--add pagination-->
     <nav aria-label="Page navigation example">
       <ul class="pagination justify-content-center m-5">
-        <li class="page-item"><a class="page-link" href="">1</a></li>
-        <li class="page-item"><a class="page-link" href="http://127.0.0.1:3000/event.html">page suivante</a></li>
+        <li class="page-item"><a class="page-link" href="index.html">1</a></li>
+        <li class="page-item"><a class="page-link" href="event.html">page suivante</a></li>
       </ul>
     </nav>
     <footer class="d-flex justify-content-around">
