--- a/event.html
+++ b/event.html
@@ -151,8 +151,8 @@
       <div id="contact">
         <h5>Contact</h5>
         <ul>
-          <li><img src="images/call.png" style="width: 30px; height: 30px" alt="un telephone"/><a href="tel:+600000000">téléphoner</a></li>
-          <li><img src="images/email.png" style="width: 30px; height: 30px" alt="une enveloppe"/><a href="mailto:exemple@exemple.com">envoyer un e-mail</a></li>
+          <li><img class="telephone" src="images/call.png" alt="un telephone"/><a href="tel:+600000000">téléphoner</a></li>
+          <li><img class="email" src="images/email.png" alt="une enveloppe"/><a href="mailto:exemple@exemple.com">envoyer un e-mail</a></li>
         </ul>
       </div>
     </footer>
