--- a/index.html
+++ b/index.html
@@ -16,6 +16,27 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&display=swap" rel="stylesheet">
   </head>
   <body>
+    <div
+      class="modal"
+      tabindex="-1"
+      role="dialog"
+      id="advertissement"
+      >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="title">ATTENTION !</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <p>Ce site est fictif ! l'association et les évènements qui y sont mentionnés sont faux et n'existent pas. Ce site a été crée pour une évaluation durant une formation</p>
+          </div>
+          
+        </div>
+      </div>
+    </div>
     <header>
       <nav class="navbar fixed-top navbar-light bg-light d-flex justify-content-around">
         <div class="container-fluid">
