--- a/index.html
+++ b/index.html
@@ -15,28 +15,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <div
-      class="modal"
-      tabindex="-1"
-      role="dialog"
-      id="advertissement"
-      >
-      <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="title">ATTENTION !</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <p>Ce site est fictif ! l'association et les évènements qui y sont mentionnés sont faux et n'existent pas. Ce site a été crée pour une évaluation durant une formation</p>
-          </div>
-          
-        </div>
-      </div>
-    </div>
     <header>
       <nav class="navbar fixed-top navbar-light bg-light d-flex justify-content-around">
         <div class="container-fluid">
@@ -98,5 +76,8 @@
         </ul>
       </div>
     </footer>
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
